# open-context7-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: start.sh
src/: __init__.py  deps.py  main.py
src/adapters/: ai.py  gitlab.py
src/api/: __init__.py
src/api/v1/: __init__.py  library.py
src/core/: config.py  constants.py  enums.py  errors.py  logging.py  sentry.py
src/middleware/: __init__.py  error_handler.py
src/schemas/: ai.py  base.py  internal.py  requests.py  responses.py
src/services/: library.py  processor.py  storage.py
src/utils/: __init__.py  common.py  response.py
